--- a/CasusStartToBike/Views/Users/Profile.cshtml
+++ b/CasusStartToBike/Views/Users/Profile.cshtml
@@ -43,15 +43,16 @@
         }
     </div>
     <div>
-        @Html.ActionLink("Follow", "Profile", "Users", new { id = Convert.ToInt32(Session["UserID"].ToString()) })
-        @*@if (Model.Id == Session.["User.ID"])
+        
+        @if (Model.Id == Convert.ToInt32(Session["User.ID"]))
             {
 
             }
             else
             {
-                <button type="button" onclick="alert('Followed!')">Follow</button>
-            }*@
+                @Html.ActionLink("Volg", "FollowUser", "Users", new{ id = Model.Id })
+                
+            }
 
     </div>
     <br />
