--- a/CasusStartToBike/Views/Badges/Create.cshtml
+++ b/CasusStartToBike/Views/Badges/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Aanmaken</h2>
 
 
 @using (Html.BeginForm()) 
@@ -33,14 +33,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Aanmaken" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug naar de lijst", "Index", new { @class = "btn btn-secondary" })
 </div>
 
 @section Scripts {
