--- a/CasusStartToBike/Views/Reviews/Delete.cshtml
+++ b/CasusStartToBike/Views/Reviews/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Verwijderen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je het zeker dat je deze review wil verwijderen?</h3>
 <div>
     <h4>Review</h4>
     <hr />
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            @Html.ActionLink("Terug naar de lijst", "Index", new { @class = "btn btn-light" })
         </div>
     }
 </div>
