--- a/CasusStartToBike/Views/Reviews/Details.cshtml
+++ b/CasusStartToBike/Views/Reviews/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Aanpassen", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Terug naar de lijst", "Index", new { @class = "btn btn-light" })
 </p>
