--- a/CasusStartToBike/Views/Users/Index.cshtml
+++ b/CasusStartToBike/Views/Users/Index.cshtml
@@ -52,13 +52,13 @@
                     @Html.DisplayFor(modelItem => item.Role)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-success btn-sm" }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-sm" }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
                 </td>
             }
             <td>
-                @Html.ActionLink("Profiel bekijken", "Profile", new { id = item.Id })
+                @Html.ActionLink("Profiel bekijken", "Profile", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
             </td>
         </tr>
     }
