--- a/CasusStartToBike/Views/Shared/_Layout.cshtml
+++ b/CasusStartToBike/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                         <li class="nav-item">@Html.ActionLink("Evenementen", "Index", "CycleEvents", null, new { @class = "nav-link" })</li>
                         <li class="nav-item">@Html.ActionLink("Routes", "Index", "CycleRoutes", null, new { @class = "nav-link" })</li>
                         <li class="nav-item">@Html.ActionLink("Badges", "Index", "Badges", null, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Reviews", "Index", "Reviews", null, new { @class = "nav-link" })</li>
+                        @*<li class="nav-item">@Html.ActionLink("Reviews", "Index", "Reviews", null, new { @class = "nav-link" })</li>*@
                         <li class="nav-item">@Html.ActionLink("Gebruikers", "Index", "Users", null, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Account", "Index", "Accounts", null, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Volgers", "Index", "Followers", null, new { @class = "nav-link" })</li>
+                        @*<li class="nav-item">@Html.ActionLink("Account", "Index", "Accounts", null, new { @class = "nav-link" })</li>*@
+                        @*<li class="nav-item">@Html.ActionLink("Volgers", "Index", "Followers", null, new { @class = "nav-link" })</li>*@
                     }
                 </ul>
                 
