Home,about,contact page bijgewerkt

--- a/CasusStartToBike/Views/Home/About.cshtml
+++ b/CasusStartToBike/Views/Home/About.cshtml
@@ -1,7 +1,16 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@{ ViewBag.Title = "About"; }
 
-<p>Use this area to provide additional information.</p>
+<div class="jumbotron">
+    <h1 style="color: #cf000f; font-size: 600%;">Start to Bike</h1>
+    <p class="lead">
+        <b>
+            Nederland, ook wel bekend als het land van de fietsende mensen, kent sinds de wereldwijde coronapandemie een enorm stijging van het aantal verkochten fietsen ten opzichte van de jaren ervoor. Zo werden er in dit kleine land in het jaar 2020 maar liefst 663.000 nieuwe en tweedehands fietsen verkocht.
+            <br />
+            De gevolgen van de coronamaatregelen hebben ervoor gezorgd dat veel bedrijven en verenigingen hun deuren moesten sluiten, denk hierbij aan pretparken, sportscholen, voetbalvereniging, ect. Dit heeft ervoor gezorgd dat nog meer Nederlanders een fiets kochten omdat samen met het gezin gaan fietsen de enige toegelaten vrijetijdsbesteding was die men nog kon doen.
+            <br />
+            De Nederlanders hebben in het eerste jaar van de coronapandemie gemiddeld 30% meer kilometers gefietst dan het voorgaande jaar 2019. Daarom wil men kijken voor een interactieve ICT-toepassing om Nederlanders die pas beginnen aan hun fiets avonturen op weg te helpen.
+        </b>
+    </p>
+    
+    <p><a href="/Access/Register" class="btn btn-primary btn-lg">Meld je nu aan!</a></p>
+</div>
