--- a/CasusStartToBike/Views/Home/Index.cshtml
+++ b/CasusStartToBike/Views/Home/Index.cshtml
@@ -1,31 +1,17 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@{ ViewBag.Title = "Home Page"; }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@if (Session["UserID"] == null)
+{
+<div class="ml-auto mb-1 text-sm text-center">
+    <h1 style="color: #cf000f; font-size: 600%;">Start To Bike!</h1>
+    <p class="lead" style="font-size: 200%;"><b>Wordt meer actief met fietsen!</b></p>
+    <p><a href="/Access/Register" class="btn btn-primary btn-lg">Meld je nu aan!</a></p>
+</div> }
+            else
+            {
+<div class="ml-auto mb-1 text-sm text-center">
+    <h1 style="color: #cf000f; font-size: 600%;">Welkom</h1>
+    <p class="lead" style="font-size: 200%;"><b>Veel plezier met Fietsen!!</b></p>
+</div>}
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
