--- a/CasusStartToBike/Views/Shared/_Layout.cshtml
+++ b/CasusStartToBike/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <Header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand col-md-3 col-lg-2 bg-dark text-white px-3" href="#">Gotcha</a>
+            <a class="navbar-brand col-md-3 col-lg-2 bg-dark text-white px-3" href="#">Start To Bike</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
