--- a/CasusStartToBike/Views/CycleRoutes/Index.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Index.cshtml
@@ -64,6 +64,7 @@
                     </td>
                     <td>
                         @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" })
+                        @Html.ActionLink("Reviews", "Index", "Reviews", new { id = item.Id, route = true }, new { @class = "btn btn-dark btn-sm" })
                     </td>
                 </tr>
 
@@ -101,7 +102,7 @@
                 <th></th>
             </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model.Where(e => e.MakerId.ToString() == Session["UserID"].ToString())) {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.RouteName)
