Titels/Buttons edits

--- a/CasusStartToBike/Views/Access/Login.cshtml
+++ b/CasusStartToBike/Views/Access/Login.cshtml
@@ -74,7 +74,7 @@
             <div class="col-lg-6" >
                     <div class="container card2 card bg-light border-0 px-4 py-5">
                         <div class="btn-holder">
-                            <p style="text-align: center;"><strong>Heeft u nog geen account, maakt dan vandaag nog een aan en speel mee!</strong></p>
+                            <p style="text-align: center;"><strong>Heeft u nog geen account, maakt dan vandaag nog een aan en fiets mee!</strong></p>
                             @Html.ActionLink("Registreren", "Register", "Access", null, new { @class = "btn btn-primary form-control" })
                         </div>
                     </div>
@@ -83,7 +83,7 @@
 
         <div class=" row d-flex bg-blue py-4">
             <div class="row px-3">
-                <a href="~/Access/PasswordReset" class="ml-auto mb-0 text-sm text-center">Kan u niet inloggen of bent u uw wachtwoord vergeten, klik dan hier.</a>
+                <p href="~/Access/PasswordReset" class="ml-auto mb-0 text-sm text-center">Kan u niet inloggen of bent u uw wachtwoord vergeten, klik dan <a href="/Access/PasswordReset">hier</a>.</p>
             </div>
         </div>
     </div>
