--- a/CasusStartToBike/Views/Accounts/Index.cshtml
+++ b/CasusStartToBike/Views/Accounts/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Account</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nieuwe aanmaken", "Create")
 </p>
 <table class="table">
     <tr>
@@ -38,9 +38,9 @@
             @if (Session["UserRole"].ToString() == "Admin")
             {
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Bewerken", "Edit", new { /* id=item.PrimaryKey */ }) |
                     @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Verwijderen", "Delete", new { /* id=item.PrimaryKey */ })
                 </td>
             }
 
