--- a/CasusStartToBike/Views/Badges/Details.cshtml
+++ b/CasusStartToBike/Views/Badges/Details.cshtml
@@ -13,7 +13,7 @@
         <p>
             Deze functionaliteit is nog niet geïmplementeerd.
         </p>
-        @Html.ActionLink("Terug naar de lijst", "Index", null, new { @class = "btn btn-light" })
+        @Html.ActionLink("Terug naar de lijst", "Index", new { @class = "btn btn-light" })
     </dl>
 </div>
 
