--- a/CasusStartToBike/Views/Badges/Edit.cshtml
+++ b/CasusStartToBike/Views/Badges/Edit.cshtml
@@ -42,7 +42,7 @@
 }
 
 <div>
-    @Html.ActionLink("Terug naar de lijst", "Index", null, new { @class = "btn btn-light" })
+    @Html.ActionLink("Terug naar de lijst", "Index", new { @class = "btn btn-light" })
 </div>
 
 @section Scripts {
