--- a/CasusStartToBike/Views/CycleRoutes/Create.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create CycleRoute";
 }
-<h2>Create CycleRoute</h2>
+<h2>Route Aanmaken</h2>
 
 @using (Html.BeginForm())
 {
@@ -77,8 +77,8 @@
                 <table class="table" id="Locations">
                     <thead>
                         <tr>
-                            <th scope="col">Location</th>
-                            <th scope="col">Delete</th>
+                            <th scope="col">Locatie</th>
+                            <th scope="col">Verwijder</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -90,7 +90,7 @@
                         <input type="text" class="form-control" id="locationId" placeholder="Location">
                     </div>
                     <div class="col">
-                        <button type="button" class="btn btn-primary " id="Addmarker" onclick="addRow()">update</button>
+                        <button type="button" class="btn btn-primary " id="Addmarker" onclick="addRow()">Updaten</button>
                     </div>
                 </div>
             </div>
