--- a/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Edit.cshtml
@@ -82,8 +82,8 @@
                 <table class="table" id="Locations">
                     <thead>
                         <tr>
-                            <th scope="col">Location</th>
-                            <th scope="col">Delete</th>
+                            <th scope="col">Locatie</th>
+                            <th scope="col">Verwijder</th>
                         </tr>
                     </thead>
                     <tbody>
