--- a/CasusStartToBike/Views/Accounts/Delete.cshtml
+++ b/CasusStartToBike/Views/Accounts/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Verwijderen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ben je zeker dat je dit wilt verwijderen?</h3>
 <div>
     <h4>Account</h4>
     <hr />
@@ -41,8 +41,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Verwijder" class="btn btn-default" /> |
+            @Html.ActionLink("Terug", "Index")
         </div>
     }
 </div>
