--- a/CasusStartToBike/Views/Accounts/Details.cshtml
+++ b/CasusStartToBike/Views/Accounts/Details.cshtml
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Bewerken", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Terug", "Index")
 </p>
