--- a/CasusStartToBike/Views/CycleRoutes/Delete.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Verwijderen</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Ben je zeker dat je dit wil verwijderen?</h3>
 <div>
-    <h4>CycleRoute</h4>
+    <h4>Route</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -65,8 +65,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Verwijder" class="btn btn-default" /> |
+            @Html.ActionLink("Terug", "Index")
         </div>
     }
 </div>
