--- a/CasusStartToBike/Views/CycleRoutes/Details.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Details.cshtml
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div>
-                    <h4>CycleRoute</h4>
+                    <h4>Route</h4>
                     <hr />
                     <dl class="dl-horizontal">
                         <dt>
