--- a/CasusStartToBike/Views/Shared/Error.cshtml
+++ b/CasusStartToBike/Views/Shared/Error.cshtml
@@ -7,7 +7,7 @@
 <body>
     <hgroup>
         <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h2>Er is helaas een fout opgetreden, gelieve contact op te nemen.</h2>
     </hgroup>
 </body>
 </html>
