--- a/CasusStartToBike/Views/Users/Details.cshtml
+++ b/CasusStartToBike/Views/Users/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>User</h4>
+    <h4>Gebruiker</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -46,5 +46,5 @@
 </div>
 <p>
     @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id })*@ |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug", "Index")
 </p>
