--- a/CasusStartToBike/Views/Users/Index.cshtml
+++ b/CasusStartToBike/Views/Users/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Zoek gebruiker";
 }
 
-<h2>Index</h2>
+<h2>Overzicht</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nieuwe Aanmaken", "Create")
 </p>
 <table class="table">
     <tr>
@@ -52,13 +52,13 @@
                     @Html.DisplayFor(modelItem => item.Role)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-success btn-sm" }) |
+                    @Html.ActionLink("Bewerken", "Edit", new { id = item.Id }, new { @class = "btn btn-success btn-sm" }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success btn-sm" }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
+                    @Html.ActionLink("Verwijder", "Delete", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
                 </td>
             }
             <td>
-                @Html.ActionLink("Profiel bekijken", "Profile", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
+                @Html.ActionLink("Profiel Bekijken", "Profile", new { id = item.Id }, new { @class = "btn btn-success btn-sm" })
             </td>
         </tr>
     }
