--- a/CasusStartToBike/Views/CycleRoutes/Index.cshtml
+++ b/CasusStartToBike/Views/CycleRoutes/Index.cshtml
@@ -39,36 +39,38 @@
                 <th></th>
 
 
-             
+
             </tr>
 
             @foreach (var item in Model.Where(e => e.MakerId.ToString() != Session["UserID"].ToString()))
-             {
+            {
 
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RouteName)
-                    </td>
+                if (item.IsPublic)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RouteName)
+                        </td>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RouteType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Difficulty)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Badge.BadgeName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.User.Account.LastName) Deze naam moet link worden naar profile van user
-                    </td>
-                    <td>
-                        @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" })
-                        @Html.ActionLink("Reviews", "Index", "Reviews", new { id = item.Id, route = true }, new { @class = "btn btn-dark btn-sm" })
-                    </td>
-                </tr>
-
-             }
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RouteType)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Difficulty)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Badge.BadgeName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.User.Account.LastName) Deze naam moet link worden naar profile van user
+                        </td>
+                        <td>
+                            @Html.ActionLink("Inzien", "Details", new { id = item.Id }, new { @class = "btn btn-info btn-sm" })
+                            @Html.ActionLink("Reviews", "Index", "Reviews", new { id = item.Id, route = true }, new { @class = "btn btn-dark btn-sm" })
+                        </td>
+                    </tr>
+                }
+            }
 
         </table>
 
